--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -14,7 +14,7 @@
         <!-- Own css styling -->    
         <link th:href="@{/css/things.css}" rel="stylesheet"></link>
         
-        <title>Title</title>
+        <title>Hierophlex</title>
         
          <!-- Fontawesome Icons -->
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
