--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,14 +29,20 @@
 
             </div>
         </nav>
-        <br>
-            <br>
-                <div class="container">
-                    <div class="jumbotron mt-5">
+        <div id="header"><div class="jumbotron mt-5">
                         <div class="container">
                             <h1 class="display-4">HIEROPHLEX</h1>             
                         </div>
                     </div>
+            
+            
+                
+        </div>
+            
+        <br>
+            <br>
+                <div class="container">
+                    
 
                     
                         <div class="col d-flex justify-content-center">
@@ -55,7 +61,26 @@
 
                     </div>
 
+                <div id="footer">
+                    <div class="container">
+                        <div class="col d-flex justify-content-center">
+                               <p> Testi teksti</p>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                         
+                            <div class="footericon">
+                            <i class="fab fa-500px"></i>
+                            <i class="fab fa-500px"></i>
+                            <i class="fab fa-500px"></i>
+                            <i class="fab fa-500px"></i>
+                            <i class="fab fa-500px"></i>
+                            <i class="fab fa-500px"></i>
+                        
+                            </div>
+                        </div>
+                    </div>
+                </div>        
                 
-                <div th:replace="fragments/layout :: scipt"></div>
-                </body>
-                </html>
+        <div th:replace="fragments/layout :: scipt"></div>
+    </body>
+</html>
