--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,4 +1,9 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments/layout :: head">
         <meta charset="UTF-8" />
@@ -9,18 +14,9 @@
     <body>
         <div th:replace="fragments/layout :: navbar"></div>
        
-        <div id="header"><div class="jumbotron mt-5">
-                <div class="container">
-                    <h1 class="display-4">HIEROPHLEX</h1>             
-                </div>
-            </div>
+      
 
-
-
-        </div>
-
-        <br>
-            <br>
+      
                 <div class="container">
 
 
@@ -31,12 +27,7 @@
                     <div class="col d-flex justify-content-center">
 
 
-                        <div class="card" style="width: 75%;">
-                            <a href="https://hierophlex.bandcamp.com/album/subatomic-conspiracy?fbclid=IwAR08mr8NxqUS93i92U6ssPuXD75-eCGKZcTm5yIvMFyUgPQ9pDOz61ZnPns"><img class="card-img-top" th:src="@{/IMG/album.jpg}" alt="Album cover"></a>
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://hierophlex.bandcamp.com/album/subatomic-conspiracy?fbclid=IwAR08mr8NxqUS93i92U6ssPuXD75-eCGKZcTm5yIvMFyUgPQ9pDOz61ZnPns">Bandcamp</a></p>
-                            </div>
-                        </div>
+                        
                     </div>
 
                 </div>
