--- a/src/main/resources/static/css/things.css
+++ b/src/main/resources/static/css/things.css
@@ -74,6 +74,7 @@ a:hover  {
     padding: 7.5em 0 2em 0;
     cursor: default;
     height: 800px;
+    transition: opacity 1s ease-in-out;
 }
 
 #footer {
