--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,20 +8,22 @@
     </head>
     <body>
         <div th:replace="fragments/layout :: navbar"></div>
-       
-        <div id="header"><div class="jumbotron mt-5">
-                <div class="container">
+
+        <div class="background-image">
+            <div class="jumbotron mt-5">
+                <div class="container mt-2">
                     <h1 class="display-4">HIEROPHLEX</h1>             
                 </div>
             </div>
-
-
-
+        </div>
+        <div class="jumbotron mt-5 w-100">
+            <div class="container mt-2">
+                <h1 class="display-4 orange">HIEROPHLEX</h1>             
+            </div>
         </div>
 
-        <br>
-            <br>
-                <div class="container">
+       
+                <div class="container massivemargin">
 
 
 
@@ -43,16 +45,15 @@
 
                 <div id="footer">
                     <div class="container">
-                        <div class="col d-flex justify-content-center">
+                        <div class="col d-flex flex-column text-center justify-content-center">
                             <p> Testi teksti</p>
-                        </div>
-                        <div class="col d-flex justify-content-center">
+                        
 
                             <div class="footericon">
                                 <i class="fas fa-headphones-alt"></i>
-                               <i class="fas fa-music"></i>
-                               <a href="https://soundcloud.com/hierophlex" ><i class="fab fa-soundcloud"></i></a>
-                                
+                                <i class="fas fa-music"></i>
+                                <a href="https://soundcloud.com/hierophlex" ><i class="fab fa-soundcloud"></i></a>
+
 
                             </div>
                         </div>
