--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,17 +10,29 @@
         <div th:replace="fragments/layout :: navbar"></div>
 
         <div class="background-image">
-            <div class="jumbotron mt-5">
+            <div class="jumbotron mt-5 d-none d-md-block">
                 <div class="container mt-2">
                     <h1 class="display-4">HIEROPHLEX</h1>             
                 </div>
             </div>
+            <div class="jumbotron mt-5 d-block d-md-none">
+                <div class="container mt-2">
+                    
+                </div><h1>HIEROPHLEX</h1>
+            </div>
+            </div>
         </div>
-        <div class="jumbotron mt-5 w-100">
+        
+        <div class="jumbotron mt-5 d-none d-md-block">
             <div class="container mt-2">
                 <h1 class="display-4 orange">HIEROPHLEX</h1>             
             </div>
         </div>
+        <div class="jumbotron mt-5 d-block d-md-none">
+                <div class="container mt-2">
+                    
+                </div><h1 class="orange">HIEROPHLEX</h1>
+            </div>
 
        
                 <div class="container massivemargin">
